# HO

./: .gitignore  CMakeLists.txt  README.md
include/: mqqtUserClient.h  mqttmenager.h  uiconnector.h
qml/: ConnectionStateControl.qml  PopUpSettings.qml  SettingButton.qml  main.qml  main_setting.qml
src/: main.cpp  mqqtUserClient.cpp  mqttmenager.cpp  qml.qrc  uiconnector.cpp
